Update to Tailwind 2.0 and refactor grid example

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,8 @@
     --color-bg-default: #fff;
     --color-bg-inverse: #5255ac;
 
+    --color-dark-bg-primary: #373737;
+
     --color-text-primary: #fff;
     --color-text-secondary: #44467b;
     --color-text-default: #373737;
